--- a/templates/tickets/create_edit_ticket.html
+++ b/templates/tickets/create_edit_ticket.html
@@ -400,7 +400,7 @@
             <td>
               <a>{{i.subject}}</a>
               <br>
-              <small>{{i.date|date:"d/m/y H:i:s"}}</small>
+              <small>{{i.created|date:"d/m/y H:i:s"}}</small>
             </td>
             <td>
               {{i.body}}
