--- a/templates/tickets/view.html
+++ b/templates/tickets/view.html
@@ -303,7 +303,7 @@
               <td>
                 <a>{{i.subject}}</a>
                 <br>
-                <small>{{i.date|date:"d/m/y H:i:s"}}</small>
+                <small>{{i.created|date:"d/m/y H:i:s"}}</small>
               </td>
               <td>
                 {{i.body}}
